--- a/html/pfappserver/root/config/profile/create.tt
+++ b/html/pfappserver/root/config/profile/create.tt
@@ -1,4 +1,4 @@
-<div id="portal_profile_create">
+<div id="connection_profile_create">
 
   <div class="modal fade hide" id="createProfile">
     <div class="modal-header">
@@ -41,7 +41,7 @@
       <div class="tab-pane fade in [% 'active' IF tab == 'captive-portal' %]" id="captive-portal">
         [% INCLUDE 'config/profile/captive-portal-settings.tt' tab='settings' %]
       </div>
-      [%- IF can_access("PORTAL_PROFILES_CREATE") %]
+      [%- IF can_access("CONNECTION_PROFILES_CREATE") %]
       <div class="form-actions">
         <a data-target="#createProfile" data-toggle="modal" class="btn btn-primary">[% l('Save') %]</a>
         <button type="reset" class="btn">[% l('Reset') %]</button>
