--- a/html/pfappserver/root/config/profile/index.tt
+++ b/html/pfappserver/root/config/profile/index.tt
@@ -1,4 +1,4 @@
-<div id="portal_profile_index">
+<div id="connection_profile_index">
 [% profiles = form.field('items') %]
 <div class="modal fade hide" id="deleteProfile">
   <div class="modal-header">
@@ -55,7 +55,7 @@
             <a href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('view'), [ profile_id ]) %]">[% profile_id | html %]</a>
         </td>
         <td>[% profile.field('description').value %]</td>
-        <td>[% IF can_access("PORTAL_PROFILES_DELETE") %]<a class="btn btn-mini btn-danger call-modal" data-modal="deleteProfile" data-modal-content="[% profile_id | html %]"  href="[% c.uri_for(c.controller('Config::Profile').action_for('remove'), [ profile_id ]) %]">[% l('Delete') %]</a>[% END %] <a class="btn btn-mini" href="/portal_preview/captive-portal?PORTAL=[% profile_id %]" target="_blank">[% l('Preview') %]</a></td>
+        <td>[% IF can_access("CONNECTION_PROFILES_DELETE") %]<a class="btn btn-mini btn-danger call-modal" data-modal="deleteProfile" data-modal-content="[% profile_id | html %]"  href="[% c.uri_for(c.controller('Config::Profile').action_for('remove'), [ profile_id ]) %]">[% l('Delete') %]</a>[% END %] <a class="btn btn-mini" href="/portal_preview/?PORTAL=[% profile_id %]" target="_blank">[% l('Preview') %]</a></td>
       </tr>
       [% END %]
       [% END -%]
@@ -64,7 +64,7 @@
   </table>
 </form>
 
-[%- IF can_access("PORTAL_PROFILES_CREATE") %]
+[%- IF can_access("CONNECTION_PROFILES_CREATE") %]
   <div class="form-actions">
     <a id="createProfile" class="btn" href="[% c.pf_hash_for(c.controller('Config::Profile').action_for('create')) %]">[% l('Add profile') %]</a>
   </div>
