--- a/html/pfappserver/root/config/profile/view.tt
+++ b/html/pfappserver/root/config/profile/view.tt
@@ -1,6 +1,6 @@
 <h2></h2>
 [%-  tab =  c.req.param('tab') || 'settings' -%]
-<div id="portal_profile_read">
+<div id="connection_profile_read">
   <div class="modal fade hide" id="saveProfile">
     <div class="modal-header">
       <h3><i>[% l('Saving profile ') %]</i> <span id="content"></span></h3>
@@ -42,7 +42,7 @@
       <div class="tab-pane fade in [% 'active' IF tab == 'captive-portal' %]" id="captive-portal">
         [% INCLUDE 'config/profile/captive-portal-settings.tt' tab='settings' %]
       </div>
-      [%- IF can_access("PORTAL_PROFILES_UPDATE") %]
+      [%- IF can_access("CONNECTION_PROFILES_UPDATE") %]
       <div class="form-actions">
         <a data-modal="saveProfile" data-modal-content="[% id | html %]" class="btn btn-primary call-modal-confirm-form">[% l('Save') %]</a>
         <button type="reset" class="btn">[% l('Reset') %]</button>
