--- a/addons/monit/monit_checks_configurations/00_packetfence.tt
+++ b/addons/monit/monit_checks_configurations/00_packetfence.tt
@@ -114,11 +114,16 @@ check process packetfence-redis_queue with pidfile /usr/local/pf/var/run/redis_q
     if failed host 127.0.0.1 port 6380 protocol redis for 5 cycles then alert
     if 3 restarts within 10 cycles then alert
 
+check process packetfence-winbind with pidfile /usr/local/pf/var/run/winbindd-wrapper.pid
+    group PacketFence
+    start program = "/usr/local/pf/bin/pfcmd service windbindd start" with timeout 60 seconds
+    stop program = "/usr/local/pf/bin/pfcmd service windbindd stop"
+    if 3 restarts within 10 cycles then alert
+
 
 [% FOREACH domain IN DOMAINS.keys %]
 check process packetfence-winbind-[% domain %] with pidfile [% DOMAINS.$domain %]
     group PacketFence
-    start program = "/usr/sbin/winbindd -D -s /etc/samba/[% domain %].conf -l /var/log/samba[% domain %]" with timeout 60 seconds
-    stop program  = "/bin/kill [% DOMAINS.$domain %]"
-    if 3 restarts within 10 cycles then alert
+    if changed ppid then alert
+    depends on packetfence-winbind
 [% END %]
