--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -100,27 +100,28 @@ table.sources {
               [% list_entry( 'Config::Profile', 'index', 'Connection Profiles') | none %]
               [%- END %]
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
-              <li class="nav-header">[% pf_section_entry('system_config', 'System Configuration') | none %]</li>
-              [% pf_section_entry( 'main', 'Main Configuration') | none %]
-              <!--[% pf_section_entry( 'general', 'General configuration') | none %]
-              [% pf_section_entry( 'alerting', 'Alerting') | none %]
               [%- IF can_access("PFMON_READ") %]
               [% list_entry('Config::Pfmon', 'index', 'Maintenance Tasks') | none %]
               [%- END %]
-              [% pf_section_entry( 'advanced', 'Advanced') | none %]
-              [% pf_section_entry( 'maintenance', 'Maintenance') | none %]
-              [% pf_section_entry( 'services', 'Services') | none %]-->
-              [% pf_section_entry( 'database', 'Database') | none %]
-              [% pf_section_entry( 'inline', 'Inline') | none %]
-              [% pf_section_entry( 'cluster', 'Cluster') | none %]
+              <li class="nav-header">[% pf_section_entry('compliance', 'Compliance') | none %]</li>
+              [%- IF can_access("FINGERBANK_READ") %]
+              [% pf_section_entry( 'profiling', 'Fingerbank Profiling') | none %]
               [%- END %]
-              [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
-              [%- IF can_access("ADMIN_ROLES_READ") %]
-              [% list_entry('Config::AdminRoles', 'index', 'Admin Access') | none %]
+              [%- IF can_access("VIOLATIONS_READ") %]
+              [% list_entry('Violation', 'index', 'Violations') | none %]
+              [%- END %]
+              [%- IF can_access("SCAN_READ","WMI_READ","CONFIGURATION_MAIN_READ") %]
+              [% pf_section_entry( 'scans', 'Scans') | none %]
+              [%- END %]
+              [%- IF can_access("PFDETECT_READ") %]
+              [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
               [%- END %]
               <li class="nav-header">[% pf_section_entry('intergration', 'Integration') | none %]</li>
+              [%- IF can_access("FIREWALL_SSO_READ") %]
+              [% list_entry('Config::Firewall_SSO', 'index', 'Firewall SSO') | none %]
+              [%- END %]
               [% IF can_access("MSE_READ") %]
-              [% pf_section_entry( 'mse_tab', 'Node MSE Tab') | none %]
+              [% pf_section_entry( 'mse_tab', 'Cisco Mobility Sevices Engine') | none %]
               [%- END %]
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'metadefender', 'OPSWAT Metadefender') | none %]
@@ -146,22 +147,6 @@ table.sources {
               [% pf_section_entry( 'guests_admin_registration', 'Access Duration') | none %]
               [%- END %]
               [% pf_section_entry( 'device_registration', 'Device Registration') | none %]
-              <li class="nav-header">[% pf_section_entry('compliance', 'Compliance') | none %]</li>
-              [%- IF can_access("FINGERBANK_READ") %]
-              [% pf_section_entry( 'profiling', 'Profiling with Fingerbank') | none %]
-              [%- END %]
-              [%- IF can_access("VIOLATIONS_READ") %]
-              [% list_entry('Violation', 'index', 'Violations') | none %]
-              [%- END %]
-              [%- IF can_access("FIREWALL_SSO_READ") %]
-              [% list_entry('Config::Firewall_SSO', 'index', 'Firewall SSO') | none %]
-              [%- END %]
-              [%- IF can_access("SCAN_READ","WMI_READ","CONFIGURATION_MAIN_READ") %]
-              [% pf_section_entry( 'scans', 'Scans') | none %]
-              [%- END %]
-              [%- IF can_access("PFDETECT_READ") %]
-              [% list_entry('Config::Pfdetect', 'index', 'Syslog Parsers') | none %]
-              [%- END %]
               <li class="nav-header">[% pf_section_entry('advanced_conf', 'Advanced Configuration') | none %]</li>
               [%- IF can_access("INTERFACES_READ") %]
               [% pf_section_entry( 'networks', 'Networks') | none %]
@@ -171,6 +156,16 @@ table.sources {
               [% pf_section_entry( 'snmp_traps', 'SNMP') | none %]
               [%- IF can_access("FLOATING_DEVICES_READ") %]
               [% list_entry('Config::FloatingDevice', 'index', 'Floating Device') | none %]
+              [%- END %]
+              <li class="nav-header">[% pf_section_entry('system_config', 'System Configuration') | none %]</li>
+              [% pf_section_entry( 'main', 'Main Configuration') | none %]
+              [% pf_section_entry( 'database', 'Database') | none %]
+              [% pf_section_entry( 'inline', 'Inline') | none %]
+              [% pf_section_entry( 'cluster', 'Cluster') | none %]
+              [%- END %]
+              [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
+              [%- IF can_access("ADMIN_ROLES_READ") %]
+              [% list_entry('Config::AdminRoles', 'index', 'Admin Access') | none %]
               [%- END %]
           </div><!--/.well -->
         </div><!--/span-->
