--- a/html/pfappserver/root/roles/index.tt
+++ b/html/pfappserver/root/roles/index.tt
@@ -8,11 +8,10 @@
       </div>[% END %]
       <p>[% l('Define the roles which will apply to all devices on your network.') %]</p>
 
-      [% IF roles.size -%]
+      [% IF items.size -%]
       <table class="table">
         <thead>
           <tr>
-            <th>[% l('Id') %]</th>
             <th>[% l('Name') %]</th>
             <th class="hidden-phone">[% l('Description') %]</th>
             <th class="hidden-phone">[% l('Max nodes per user') %]</th>
@@ -20,10 +19,9 @@
           </tr>
         </thead>
         <tbody>
-          [% FOREACH role IN roles %]
+          [% FOREACH role IN items %]
           <tr>
-            <td>[% role.category_id | html %]</td>
-            <td><a href="[% c.uri_for(c.controller('Roles').action_for('read'), [ role.category_id ]) %]#modalRole">[% role.name | html %]</a></td>
+            <td><a href="[% c.uri_for(c.controller.action_for('view'), [ role.id ]) %]#modalRole">[% role.id | html %]</a></td>
             <td class="hidden-phone">[% role.notes | html %]</td>
             <td class="hidden-phone">[% role.max_nodes_per_pid | html %]</td>
           </tr>
@@ -32,7 +30,7 @@
       </table>
       [% END -%]
 
-      <div id="noRole" class="unwell[% ' hidden' IF roles.size %]">
+      <div id="noRole" class="unwell[% ' hidden' IF items.size %]">
         <i class="icon-briefcase icon-large"></i><p>[% l('No role defined') %]</p>
       </div>
 
