move roles in config namespace

--- a/html/pfappserver/root/config/roles/index.tt
+++ b/html/pfappserver/root/config/roles/index.tt
@@ -36,6 +36,6 @@
 
       [%- IF can_access("USERS_ROLES_CREATE") %]
       <div class="form-actions">
-        <a id="createRole" class="btn" href="[% c.uri_for(c.controller('Roles').action_for('create')) %]">[% l('Add role') %]</a>
+        <a id="createRole" class="btn" href="[% c.uri_for(c.controller.action_for('create')) %]">[% l('Add role') %]</a>
       </div>
       [%- END %]
