edit config for proper rights

--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -82,9 +82,8 @@ table.sources {
         <div class="span2">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
-              [%- IF can_access_any("CONFIGURATION_MAIN_READ","CONNECTION_PROFILES_READ","PORTAL_MODULE_READ","ADMIN_ROLES_READ", "FILTERS_READ") -%]
               <li class="nav-header">[% pf_section_entry( 'define_policy', 'Policies and Access Control') | none %]</li>
-              [%- IF can_access("USERS_ROLES_READ","CONFIGURATION_MAIN_READ") %]
+              [%- IF can_access("USERS_ROLES_READ") %]
               [% pf_section_entry( 'roles', 'Roles') | none %]
               [%- END %]
               [%- IF can_access("DOMAIN_READ","REALM_READ") %]
@@ -99,8 +98,6 @@ table.sources {
               [%- IF can_access("CONNECTION_PROFILES_READ") %]
               [% list_entry( 'Config::Profile', 'index', 'Connection Profiles') | none %]
               [%- END %]
-              [%- END %]
-              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [%- IF can_access("PFMON_READ") %]
               [% list_entry('Config::Pfmon', 'index', 'Maintenance Tasks') | none %]
               [%- END %]
@@ -126,9 +123,12 @@ table.sources {
               [%- END %]
               [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'metadefender', 'OPSWAT Metadefender') | none %]
+              [% pf_section_entry( 'webservices', 'Web Services') | none %]
               [%- END %]
               <li class="nav-header">[% pf_section_entry('portal_config', 'Advanced Portal Configuration') | none %]</li>
+              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry('captive_portal', 'Captive Portal') | none %]
+              [%- END %]
               [%- IF can_access("FILTERS_READ") %]
               [% list_entry('Config::Filters', 'index', 'Filter engines') | none %]
               [%- END %]
@@ -152,18 +152,21 @@ table.sources {
               [%- IF can_access("INTERFACES_READ") %]
               [% pf_section_entry( 'networks', 'Networks') | none %]
               [%- END %]
+              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'omapi', 'OMAPI') | none %]
               [% pf_section_entry( 'snmp_traps', 'SNMP') | none %]
+              [%- END %]
               [%- IF can_access("FLOATING_DEVICES_READ") %]
               [% list_entry('Config::FloatingDevice', 'index', 'Floating Device') | none %]
               [%- END %]
               <li class="nav-header">[% pf_section_entry('system_config', 'System Configuration') | none %]</li>
+              [%- IF can_access("CONFIGURATION_MAIN_READ") %]
               [% pf_section_entry( 'main', 'Main Configuration') | none %]
               [% pf_section_entry( 'pfdb', 'Database') | none %]
               [% pf_section_entry( 'inline', 'Inline') | none %]
-              [% pf_section_entry( 'cluster', 'Cluster') | none %]
-              [%- END %]
+              [% pf_section_entry( 'active_active', 'Cluster') | none %]
               [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
+              [%- END %]
               [%- IF can_access("ADMIN_ROLES_READ") %]
               [% list_entry('Config::AdminRoles', 'index', 'Admin Access') | none %]
               [%- END %]
